# drumjot

./: .dockerignore  .gitignore  .stylelintrc.json  AGENTS.md  CLEANROOM_SPEC.md  Caddyfile.dev  Dockerfile  LICENSE  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  TODO.md  bunfig.toml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  esbuild.config.ts  index.html  index_template.html  package.json  paseo.json  playwright.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
.claude/: bash-redirects.json  (+1 more)
dsp/: pyproject.toml
dsp/drumjot_dsp/: __init__.py  peakpick.py
dsp/tests/: test_peakpick.py
training/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RESULTS.md  data_paths.toml.example  pyproject.toml
training/drumjot_training/: __init__.py  a2md.py  adtof.py  checkpoint.py  clean.py  config.py  dedup.py  egmd.py  embeddings.py  enst.py  forced_align.py  inference.py  lanes.py  losses.py  mdb.py  metrics.py  midi_labels.py  model.py  paradb.py  paths.py  postfilter.py  rlrr.py  runtime.py  star.py  targets.py  tom_subclassify.py  train.py  trial_perstem.py
training/drumjot_training/parampred/: __init__.py  augment.py  baseline.py  dataset.py  eval_gap.py  features.py  hybrid.py  oracle.py  probs_cache.py  regressor.py  report.py
training/scripts/: align_dataset_onsets.py  build_paradb_manifest.py  build_param_dataset.py  build_param_dataset_perstem.py  classify_paradb_cache.py  convert_ab_checkpoint.py  cymbal_feature_probe.py  cymbal_label_audit.py  cymbal_lane_loss_pick.py  cymbal_loss_ab.py  cymbal_miss_typing.py  cymbal_picker_retest.py  cymbal_recall_confusion.py  cymbal_snap_redraw.py  cymbal_snip_suspects.py  cymbal_suspect_recheck.py  cymbal_thresh_sweep.py  encode_feature_cache.py  eval_a2md.py  eval_filtered.py  eval_gt_cleanliness.py  eval_mdb.py  eval_paradb.py  eval_paradb_parallel.sh  eval_periodic.sh  extract_star_balanced.py  extract_star_mix.py  extract_star_stems.py  extract_star_subset.py  fetch_egmd.sh  fetch_models.py  fetch_star.sh  head_capacity_sweep.py  layer_sweep.py  make_debug_bundle.py  merge_paradb_shards.py  overnight_runner.py  perstem_layer_sweep.py  separate_a2md.py  separate_adtof_dataset.py  (+8 more)
training/tests/: test_a2md.py  test_adtof.py  test_augment.py  test_baseline.py  test_cachedclips_compact.py  test_checkpoint.py  test_clean.py  test_dataset.py  test_dedup.py  test_dropped_negatives.py  test_early_stop.py  test_egmd.py  test_egmd_perstem.py  test_embeddings.py  test_encoders.py  test_enst.py  test_enst_perstem.py  test_eval_gap.py  test_features.py  test_forced_align.py  test_hybrid.py  test_inference.py  test_input_norm.py  test_label_gate.py  test_lane_support_filter.py  test_lanes.py  test_metrics.py  test_midi_labels.py  test_model.py  test_new_paths.py  test_oracle.py  test_paradb.py  test_paths.py  test_peakparams.py  test_per_lane_layer.py  test_pooled.py  test_postfilter.py  test_probs_cache.py  test_regressor.py  test_report.py  (+10 more)
transcriber/: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.frontend  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
transcriber/.venv-test/: pyvenv.cfg
transcriber/app/: __init__.py  cache.py  config.py  debug.py  debug_bundle.py  main.py  models.py  outputs.py  run_log.py  sidecar.py
transcriber/app/comms/: align_lyrics_runner.py  beats_runner.py  core.py  protocol.py  runners.py  separate_runner.py  stdio_adapter.py  transcribe_runner.py
transcriber/app/pipeline/: adtof_onnx.py  adtof_onsets.py  beat_onnx.py  beat_transformer.py  beats.py  beats_align.py  beats_detect.py  beats_feel.py  beats_meter.py  beats_structure.py  beats_tempo.py  beats_types.py  critic.py  cymbal_split.py  diff.py  envelope.py  filter_llm.py  format.py  geometric_snap.py  gpu_park.py  hihat_split.py  jot_extract.py  learned_onsets.py  lint.py  llm.py  llm_util.py  lyrics_align.py  lyrics_onnx.py  note_provenance.py  onnx_cuda.py  onnx_fp16.py  onsets.py  onsets_midi.py  provision.py  quantise.py  quantise_apply.py  quantise_config.py  quantise_grid.py  quantise_llm.py  recompose.py  (+8 more)
transcriber/app/scoring/: __init__.py  alignment.py  audio_onsets.py  correction.py  lanes.py  midi_read.py  models.py  paradb_read.py  rlrr_read.py  score_map.py
transcriber/benchmarks/: README.md  __init__.py  beat_ab.py  beat_gt.py  meter_backtest.py  onset_synth.py  run_benchmark.py
transcriber/benchmarks/core/: classes.py  events.py  jot_events.py  midi_events.py  score.py  transcribe_client.py
transcriber/benchmarks/loaders/: __init__.py  base.py  egmd.py  idmt_smt.py  mdb_drums.py
transcriber/checkpoints/: .gitignore  README.md
transcriber/checkpoints/learned_onsets/: README.md
transcriber/docs/: ai-midi-to-jot-notes.md  filter-mode-proxy-reference.md
transcriber/prompts/: critic.md  examples.md  examples_instrument.md  filter_onsets.md  quantise_onsets.md  refine_lint_segment.md  refine_macro.md  refine_onsets.md  refine_structure.md  refine_velocity.md  split_cymbals.md  split_hihat.md  transcribe.md  transcribe_instrument.md
transcriber/tests/: conftest.py  test_alignment_correction.py  test_alignment_score.py  test_audio_onsets.py  test_beat_ab.py  test_beat_onnx.py  test_beats.py  test_beats_characterization.py  test_benchmark_classes.py  test_benchmark_score.py  test_cache.py  test_comms.py  test_crash_shadow.py  test_cymbal_split.py  test_filter_pathway.py  test_geometric_snap.py  test_gpu_park_vocals.py  test_hihat_split.py  test_larsnet.py  test_lint.py  test_lint_segments.py  test_llm_spec_subset.py  test_llm_util.py  test_lyrics_align.py  test_lyrics_align_cache.py  test_lyrics_align_stream.py  test_midi_read.py  test_onnx_model_e2e.py  test_onset_onnx.py  test_paradb_read.py  test_pipeline_options.py  test_provision_onnx.py  test_quantise.py  test_quantise_characterization.py  test_resume_quantise.py  test_rlrr_read.py  test_score_endpoint.py  test_score_map.py  test_scoring_lanes.py  test_separation_parity.py  (+1 more)
transcriber/tools/: format_jot.ts  jot_to_onsets.ts  lint_jot.ts  package.json  recompose_jot.ts
(+943 files in other folders)
