# Drumjot shared DSP helpers, a deliberately TINY package both the transcriber
# and the trainer depend on, so signal-processing code (peak-picking now; more
# later) has ONE implementation and can't drift between the two. Deps are kept
# minimal (numpy + scipy only) with floors compatible with both consumers, so
# adding it never perturbs either environment's resolution.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drumjot-dsp"
version = "0.1.0"
description = "Shared signal-processing helpers for Drumjot (onset peak-picking, ...)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.setuptools.packages.find]
include = ["drumjot_dsp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "SIM117"]
