[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drumjot-transcriber"
version = "0.1.0"
description = "Off-the-shelf + LLM drum transcription service for Drumjot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Audio separation + analysis.
    # audio-separator >=0.31 requires numpy 2. The MDX23C drum-piece
    # model used by `pipeline/separate.py` is only registered in 0.31+,
    # so we can't downgrade to dodge the numpy bump — we lift `numpy<2`
    # and rely on madmom@main building cleanly on numpy 2. madmom's
    # declared dep (`numpy>=1.13.4`) permits this; its Cython extensions
    # are the real risk. If the madmom install step fails on a fresh
    # build, pin a specific madmom commit known to work on numpy 2.
    "audio-separator[gpu]>=0.44",
    # PyTorch + torchaudio pinned to the cu128 range so the Docker
    # install path (which adds the cu128 wheel index) actually finds a
    # compatible build. The default PyPI wheel currently ships against
    # CUDA 13.0 and refuses to run on drivers older than ~580. cu128 is
    # the highest CUDA version most consumer drivers (570+) support.
    # Capped at <2.9: torchaudio 2.9 dropped the legacy backend API
    # (`torchaudio.AudioMetaData`, `torchaudio.list_audio_backends`)
    # that pyannote.audio 3.4.0; pulled in transitively by whisperx
    #; still calls unconditionally during `import whisperx`. Bump
    # this cap only after pyannote.audio ships a release that uses
    # the new torio-backed dispatcher.
    "torch>=2.8,<2.9",
    "torchaudio>=2.8,<2.9",
    # ADTOF onset backend (the sole per-stem onset detector). This is
    # the PyTorch port (xavriley/ADTOF-pytorch), NOT the original
    # TensorFlow ADTOF — it's torch-only (deps:
    # torch/librosa/pretty_midi) and ships its pretrained Frame_RNN
    # weights inside the wheel, so it can live in the core deps and be
    # baked into the default image with no extra TF/Keras stack and no
    # separate Zenodo weights download. Pinned to a commit SHA for a
    # reproducible graph + weights map. Bump deliberately.
    "adtof_pytorch @ git+https://github.com/xavriley/ADTOF-pytorch.git@85c192e78f716ea0b111cc8a5ee4a8f6a3a4f8a9",
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "scipy>=1.11",
    "numpy>=1.26",
    # Beat tracking + downbeat detection (the rhythmic structure backbone)
    "madmom @ git+https://github.com/CPJKU/madmom.git@main",
    "cython>=3.0",
    # Transcription evaluation + MIDI
    "mir_eval>=0.7",
    "mido>=1.3",
    # LLM
    "anthropic>=0.40",
    # Lyrics alignment.
    # whisperx bundles faster-whisper (CTranslate2 backend) + a wav2vec2
    # forced aligner for sub-word timestamps; used by `pipeline/
    # lyrics_align.py` to produce time-aligned lyrics on demand. Pulls
    # in faster-whisper, ctranslate2, pyannote-audio. The model itself
    # is downloaded lazily on first /lyrics/align call into `models_dir`
    # (size depends on WHISPER_MODEL; defaults to `medium` int8_float16,
    # ~700 MB VRAM peak; fits comfortably alongside the separation
    # models on a 6 GB GPU since separation has unloaded by then).
    "whisperx>=3.1",
    # Misc
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.setuptools.packages.find]
include = ["app*", "benchmarks*"]

[tool.ruff]
# Match repo-wide style: 100-char line limit (see ../.prettierrc tabWidth/printWidth).
line-length = 100
target-version = "py311"
extend-exclude = [
    # Cached / generated dirs that shouldn't be linted even if present.
    ".venv",
    "venv",
    "build",
    "debug",
    "models",
]

[tool.ruff.lint]
# Enabled lint groups, in roughly decreasing order of strictness:
#   E,W = pycodestyle errors / warnings
#   F   = pyflakes (unused imports, undefined names, ...)
#   I   = isort (import sorting)
#   B   = flake8-bugbear (likely bugs)
#   UP  = pyupgrade (modern syntax suggestions)
#   SIM = flake8-simplify
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
# E501 line-too-long is reported by `select = ["E"]` but we already cap
# at 100 chars; long URLs / log strings shouldn't trip ruff for cosmetic
# reasons - the formatter (if/when adopted) handles wrapping anyway.
ignore = [
    "E501",
    # B008: function calls in defaults are intentional for FastAPI's
    # `Depends(...)` / `File(...)` parameter pattern.
    "B008",
    # SIM117: nested `with` blocks are kept for readability in places.
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Tests use deliberately ugly fixtures and patterns; relax the checks.
"tests/*" = ["E", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
