[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drumjot-transcriber"
version = "0.1.0"
description = "Off-the-shelf + LLM drum transcription service for Drumjot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Audio separation + analysis.
    # audio-separator >=0.31 requires numpy 2. The MDX23C drum-piece
    # model used by `pipeline/separate.py` is only registered in 0.31+,
    # so we can't downgrade to dodge the numpy bump — we lift `numpy<2`
    # and rely on madmom@main building cleanly on numpy 2. madmom's
    # declared dep (`numpy>=1.13.4`) permits this; its Cython extensions
    # are the real risk. If the madmom install step fails on a fresh
    # build, pin a specific madmom commit known to work on numpy 2.
    "audio-separator[gpu]>=0.44",
    # PyTorch + torchaudio. Capped at <2.12 because torch 2.12 dropped
    # CUDA 12.x wheel builds entirely (the cu128 index only goes up to
    # 2.11.0), without the cap, `uv lock --upgrade` would land on
    # 2.12 (default PyPI, CUDA 13 build) while the Docker install
    # (`--index-url …/whl/cu128`) would fail to find matching wheels.
    # cu128 is the highest CUDA version most consumer drivers (570+)
    # support; cu13 needs driver 580+.
    "torch>=2.8,<2.12",
    "torchaudio>=2.8,<2.12",
    # ADTOF onset backend (the sole per-stem onset detector). This is
    # the PyTorch port (xavriley/ADTOF-pytorch), NOT the original
    # TensorFlow ADTOF — it's torch-only (deps:
    # torch/librosa/pretty_midi) and ships its pretrained Frame_RNN
    # weights inside the wheel, so it can live in the core deps and be
    # baked into the default image with no extra TF/Keras stack and no
    # separate Zenodo weights download. Pinned to a commit SHA for a
    # reproducible graph + weights map. Bump deliberately.
    "adtof_pytorch @ git+https://github.com/xavriley/ADTOF-pytorch.git@85c192e78f716ea0b111cc8a5ee4a8f6a3a4f8a9",
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "scipy>=1.11",
    "numpy>=1.26",
    "drumjot-dsp",  # shared peak-picker etc. (../dsp; see [tool.uv.sources])
    # Frozen MERT encoder for the learned-onset backend -- the DEFAULT onset
    # detector now (training/ + pipeline/learned_onsets.py runs MERT-v1-330M
    # per stem). transformers was already present transitively (via
    # ctc-forced-aligner below), but the learned stage is first-class, so we
    # declare it. No upper cap: the dev box + trainer run transformers 5.x
    # fine (the `<5` once carried in training/pyproject was stale). MERT
    # weights download from the HF hub on first use into HF_HOME
    # (=/models/huggingface in Docker, a persisted volume).
    "transformers>=4.40",
    # Beat tracking + downbeat detection (the rhythmic structure backbone)
    "madmom @ git+https://github.com/CPJKU/madmom.git@main",
    "cython>=3.0",
    # Transcription evaluation + MIDI
    "mir_eval>=0.7",
    "mido>=1.3",
    # LLM
    "anthropic>=0.40",
    # Lyrics alignment.
    # whisperx was removed: forced alignment runs through
    # `ctc-forced-aligner` below, and language is now resolved from the
    # caller's lyric text (`_detect_language_from_text`) instead of a
    # faster-whisper audio pass, so the whole CTranslate2 / pyannote
    # stack whisperx dragged in is no longer needed.
    # Long-form CTC forced aligner. MahmoudAshraf97's pure-PyTorch
    # package (the original; not the deskpai PyPI port that currently
    # owns the `ctc-forced-aligner` PyPI name). Pinned by commit SHA so
    # the build is reproducible. Bump deliberately.
    #
    # Why this package over the PyPI `ctc-forced-aligner`: the deskpai
    # port unconditionally declares `onnxruntime` (the CPU wheel) as a
    # hard install_requires AND imports it at module load, which
    # silently shadows the `onnxruntime-gpu` brought in by
    # `audio-separator[gpu]` above (both wheels install into the same
    # `onnxruntime/` directory and share `onnxruntime_pybind11_state.so`).
    # The result was every ONNX model; vocal separator AND the CTC
    # aligner; running on CPU at 100% utilisation with multi-GB RSS
    # growth. There is no import-time switch to prefer one wheel over
    # the other (microsoft/onnxruntime#7313, qdrant/fastembed#608) and
    # the deskpai `[torch]` extra doesn't help: it adds torch on top
    # but still drags in `onnxruntime` and still exposes the function-
    # level API only for the ONNX path. MahmoudAshraf's package runs
    # natively through PyTorch + HF transformers, with the same
    # function-level API (`load_alignment_model`, `generate_emissions`,
    # `get_alignments`, `get_spans`, `postprocess_results`,
    # `preprocess_text`), so the only call-site change is using a torch
    # model object in place of an ONNX `InferenceSession`. Device
    # control flows through `torch.cuda.is_available()`; the same
    # path the separator/whisperx already follow.
    #
    # Other things worth knowing (carried over from the previous note):
    #   - MMS-300m forced aligner under the hood; internal chunking +
    #     posterior stitching so a full song aligns in one call with no
    #     per-line `[start, end]` windows.
    #   - For `jpn` / `chi` `preprocess_text` switches to char-level
    #     tokenization; word-count partition still works because we
    #     preprocess each line independently and count tokens before
    #     concatenating (see `realign_text`).
    "ctc-forced-aligner @ git+https://github.com/MahmoudAshraf97/ctc-forced-aligner.git@264e7a1f81bff9ff5e787a5537020c2ad0b0df02",
    # Japanese-aware romanization for lyrics alignment. uroman (invoked
    # inside ctc-forced-aligner's `preprocess_text`) reads kanji as
    # Chinese; cutlet (on the fugashi/MeCab binding + the bundled
    # unidic-lite dictionary) produces contextual Japanese readings.
    # We pre-romanize Japanese spans before they reach `preprocess_text`
    # so the aligner sees romaji that matches the sung audio, while the
    # original kana/kanji are kept for display. unidic-lite is the
    # ~50 MB bundled dictionary (no build-time download); fugashi is a
    # native extension (needs a C toolchain at build time).
    "cutlet>=0.4",
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
    # Misc
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8"]

# PyTorch lives on a dedicated wheel index because the default PyPI
# wheels now target CUDA 13 (driver 580+); cu128 = CUDA 12.8 = highest
# CUDA most consumer drivers (570+) handle. The Docker build path uses
# the same `--index-url https://download.pytorch.org/whl/cu128` install
# (see docker/Dockerfile), so this keeps `uv sync` on the dev box
# resolving the SAME wheel set Docker ships. `explicit = true` means
# packages are only pulled from this index when listed in
# `[tool.uv.sources]` below; everything else stays on default PyPI.
[tool.uv]
# Drop torchvision: it's an UNUSED transitive dep (onnx2torch-py313 <-
# audio-separator[gpu]). The training path never imports audio-separator, and on
# cu128/WSL torchvision's compiled ops fail to load ("operator torchvision::nms
# does not exist"), which then breaks `transformers` model loading (it imports
# torchvision whenever it's present). The impossible marker removes it from the
# resolved graph so `uv sync` never reinstalls it.
# CAVEAT: this also drops it from the Docker transcriber image. audio-separator's
# audio models (BS-Roformer / MDX23C) shouldn't need torchvision (onnx2torch only
# uses it for vision ops), but verify a separation run after `uv lock` before relying on it.
override-dependencies = ["torchvision; sys_platform == 'never'"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
drumjot-dsp = { path = "../dsp", editable = true }

[tool.setuptools.packages.find]
include = ["app*", "benchmarks*"]

[tool.ruff]
# Match repo-wide style: 100-char line limit (see ../.prettierrc tabWidth/printWidth).
line-length = 100
target-version = "py311"
extend-exclude = [
    # Cached / generated dirs that shouldn't be linted even if present.
    ".venv",
    "venv",
    "build",
    "debug",
    "models",
    # Vendored verbatim from polimi-ispl/larsnet; kept byte-for-byte so it
    # can be re-synced. The Drumjot glue lives in larsnet/__init__.py.
    "app/pipeline/larsnet/unet.py",
]

[tool.ruff.lint]
# Enabled lint groups, in roughly decreasing order of strictness:
#   E,W = pycodestyle errors / warnings
#   F   = pyflakes (unused imports, undefined names, ...)
#   I   = isort (import sorting)
#   B   = flake8-bugbear (likely bugs)
#   UP  = pyupgrade (modern syntax suggestions)
#   SIM = flake8-simplify
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
# E501 line-too-long is reported by `select = ["E"]` but we already cap
# at 100 chars; long URLs / log strings shouldn't trip ruff for cosmetic
# reasons - the formatter (if/when adopted) handles wrapping anyway.
ignore = [
    "E501",
    # B008: function calls in defaults are intentional for FastAPI's
    # `Depends(...)` / `File(...)` parameter pattern.
    "B008",
    # SIM117: nested `with` blocks are kept for readability in places.
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Tests use deliberately ugly fixtures and patterns; relax the checks.
"tests/*" = ["E", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
